--- a/Redes_Recurrentes/Cuadernos/rnn_Intro_Redes_Recurrentes.ipynb
+++ b/Redes_Recurrentes/Cuadernos/rnn_Intro_Redes_Recurrentes.ipynb
@@ -6,27 +6,29 @@
     "tags": []
    },
    "source": [
-    "# <span style=\"color:#F72585\">Introducción a Redes Neuronales Recurrentes</span>"
+    "# <span style=\"color:#F72585\"><center>Introducción a Redes Neuronales Recurrentes</center></span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conceptos básicos"
+    "<center>Conceptos básicos</center>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<center>\n",
     "<figure>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Recurrentes/Imagenes/recurrente_char.png\" width=\"700\" height=\"300\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Recurrentes/Imagenes/recurrente_char.png\" width=\"700\" height=\"300\" align=\"center\"/>\n",
     "</figure>\n",
+    "</center>\n",
     "\n",
     "**<center >Modelo PLN generador de texto a nivel de caracter</center>**\n",
     "\n",
-    "Fuente: Alvaro Montenegro"
+    "<center>Fuente: Alvaro Montenegro</center>"
    ]
   },
   {
@@ -44,7 +46,7 @@
     "origin_pos": 0
    },
    "source": [
-    "En la introducción a procesamiento de lenguaje natural introducimos los modelos $ n $-gram. En tales modelos la probabilidad condicional de la palabra $ x_t $ en el paso de tiempo $ t $ solo depende de $ n-1 $ las palabras anteriores .\n",
+    "En la introducción a procesamiento de lenguaje natural introducimos los modelos $ n $-gram. En tales modelos la probabilidad condicional de la palabra $ x_t $ en el paso de tiempo $ t $ solo depende de $ n-1 $ las palabras anteriores.\n",
     "\n",
     "\n",
     "Si queremos incorporar el posible efecto de palabras anteriores al paso de tiempo $ t-(n-1) $ en $ x_t $,\n",
@@ -71,12 +73,12 @@
     "\n",
     "Recuerde que hemos hablado de capas ocultas con unidades ocultas cuando introducimos los  perceptrones multicapa.\n",
     "\n",
-    "Cabe destacar que capas ocultas y estados ocultos se refieren a dos conceptos muy diferentes.\n",
+    "Cabe destacar que capas y estados ocultos se refieren a dos conceptos muy diferentes.\n",
     "\n",
     "+ Las capas ocultas son, como se explicó, capas que están ocultas a la vista en la ruta desde la entrada hasta la salida.\n",
     "+ Los estados ocultos son técnicamente hablando `entradas` a todo lo que hacemos en un paso dado, y solo se pueden calcular observando los datos de los pasos de tiempo anteriores.\n",
     "\n",
-    "Las `redes neuronales recurrentes` (RNR) son redes neuronales con estados ocultos. Antes de presentar el modelo RNN, revisitemos el modelo perceptron multicapa (PMC)."
+    "Las `redes neuronales recurrentes` (RNR) son redes neuronales con estados ocultos. Antes de presentar el modelo RNN, revisitemos el modelo perceptron multicapa (PMC).\n"
    ]
   },
   {
@@ -124,7 +126,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Recurrentes/Imagenes/ANN_Capa_Oculta.png\" width=\"700\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Recurrentes/Imagenes/ANN_Capa_Oculta.png\" width=\"700\" height=\"500\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -243,7 +245,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Recurrentes/Imagenes/red_recurrente.png\" width=\"700\" height=\"300\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Recurrentes/Imagenes/red_recurrente.png\" width=\"700\" height=\"300\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -271,10 +273,10 @@
     "los tokens actuales y anteriores, Así cambiamos la secuencia original por un token.\n",
     "como las etiquetas. [Bengio et al](https://www.jmlr.org/papers/volume3/bengio03a/bengio03a.pdf). fueron los primeros en proponer usar una red neuronal para el modelado de idiomas.\n",
     "\n",
-    "A continuación ilustramos cómo se pueden usar RNN para predecier el siguiente caracter en un modelo de idioma basado en caracteres. Dejaremos que el tamaño del minilote sea uno, y la secuencia del texto sea \"machine\".\n",
+    "A continuación, ilustramos cómo se pueden usar RNN para predecir el siguiente caracter en un modelo de idioma basado en caracteres. Dejaremos que el tamaño del mini lote sea uno, y la secuencia del texto sea \"machine\".\n",
     "\n",
     "Para simplificar, tokenizamos el texto en caracteres en lugar de las palabras y consideramos un `modelo de lenguaje de nivel de carácter`.\n",
-    "La siguiente figura muestra cómo predecir el siguiente carácter en función de los caracteres actuales y anteriores a través de una RNR para el modelado de lenguaje de nivel de carácter."
+    "La siguiente figura muestra cómo predecir el siguiente carácter en función de los caracteres actuales y anteriores a través de una RNR para el modelado de lenguaje de nivel de carácter.\n"
    ]
   },
   {
@@ -286,7 +288,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Recurrentes/Imagenes/recurrente_char.png\" width=\"700\" height=\"300\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Recurrentes/Imagenes/recurrente_char.png\" width=\"700\" height=\"300\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -303,11 +305,11 @@
    },
    "source": [
     "Durante el proceso de entrenamiento,\n",
-    "Ejecuamos una operación `SoftMax` en la salida de la capa de salida para cada paso de tiempo, y luego usamos la pérdida entropía cruzada para calcular el error entre la salida del modelo y la etiqueta.\n",
+    "Ejecutamos una operación `SoftMax` en la salida de la capa de salida para cada paso de tiempo, y luego usamos la pérdida entropía cruzada para calcular el error entre la salida del modelo y la etiqueta.\n",
     "\n",
     "Debido al cálculo recurrente del estado oculto en la capa oculta, la salida del tiempo en el paso 3 en la figura, es $ \\mathbf{Z} _3$, y está determinado por la secuencia de texto \"h\", \"o\", y \"l\", . Dado que el siguiente carácter de la secuencia en los datos de entrenamiento es \"a\", la pérdida en el tiempo  o paso 3 dependerá de la distribución de probabilidad del siguiente carácter generado en función de la secuencia de características \"h\", \"o\", \"l\" y la etiqueta \"a\" de este paso de tiempo.\n",
     "\n",
-    "En la práctica, cada token está representado por un vector $ d $-dimensional, y usamos un tamaño de lote $ n> 1 $. Por lo tanto, la entrada $ \\mathbf{X}^{(t)} $ en el momento $ t $ será una matriz de $ d \\times N $, que es idéntica a la que discutimos antes."
+    "En la práctica, cada token está representado por un vector $ d $-dimensional, y usamos un tamaño de lote $ n> 1 $. Por lo tanto, la entrada $ \\mathbf{X}^{(t)} $ en el momento $ t $ será una matriz de $ d \\times N $, que es idéntica a la que discutimos antes.\n"
    ]
   },
   {
@@ -414,7 +416,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 64-bit",
+   "display_name": "Python 3.9.13 ('work')",
    "language": "python",
    "name": "python3"
   },
@@ -428,11 +430,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+    "hash": "3620b340ed2ed479d71e72c732c6d6a6eac39d8adbece51414abdea5ed84aec5"
    }
   }
  },
