--- a/Fundamentacion_Matematica/Cuadernos/t_0020_Algebra_Tensorial.ipynb
+++ b/Fundamentacion_Matematica/Cuadernos/t_0020_Algebra_Tensorial.ipynb
@@ -11,6 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<figure>\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Matematicas/Imagenes/Duererquadrat_3_neu.jpg\" width=\"1000\" height=\"300\" align=\"center\" /> \n",
+    "</center>   \n",
+    "</figure>\n",
+    "<center>\n",
+    "\n",
+    "Fuente: <a href=\"https://commons.wikimedia.org/wiki/File:Duererquadrat_3_neu.jpg\">Mabit1</a>, <a href=\"https://creativecommons.org/licenses/by-sa/4.0\">CC BY-SA 4.0</a>, via Wikimedia Commons\n",
+    "\n",
+    "</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## <span style=\"color:#4361EE\">Introducción</span>"
    ]
   },
@@ -18,11 +34,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En esta lección revisamos el las operaciones tensoriales que se utilizan a diario en la inteligencia artificial. Póngale principal atención al producto tensorial general al final de la lección.\n",
+    "En esta lección revisamos en las operaciones tensoriales que se utilizan a diario en la inteligencia artificial. Póngale principal atención al producto tensorial general al final de la lección.\n",
     "\n",
-    "El álgebra tensorial es tan importante en  la inteligencia artificial que las tecnologías de hardware y las técnicas matemáticas para optimizar el cálculo tensorial son tema de desarrollo e investigación mas recientes. La tecnología como GPU's, TPU's y otras mas recientes se orientan casi exclusivamente al álgebra tensorial.\n",
+    "El álgebra tensorial es tan importante en la inteligencia artificial que las tecnologías de hardware y las técnicas matemáticas para optimizar el cálculo tensorial son tema de desarrollo e investigación más recientes. La tecnología como GPU's, TPU's y otras más recientes se orientan casi exclusivamente al álgebra tensorial.\n",
     "\n",
-    "Por ejemplo [Nvidia](https://www.nvidia.com/en-us/data-center/tensor-cores/)., el gigante tecnológico líder en GPU's ha desarrollado nuevas técnicas para el cálculo del álgebra tensorial, obviamente orientadas a sus GPU's que maximizan el rendimiento \n"
+    "Por ejemplo [Nvidia](https://www.nvidia.com/en-us/data-center/tensor-cores/)., el gigante tecnológico líder en GPU's ha desarrollado nuevas técnicas para el cálculo del álgebra tensorial, obviamente orientadas a sus GPU's que maximizan el rendimiento\n"
    ]
   },
   {
@@ -36,12 +52,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NumPy está preparado para trabajar con las operaciones ordinarias del álgebra lineal y de manera mas extendida con álgebra tensorial directamente. Los siguientes ejemplos muestran como sumar tensores. Usaremos tensores de tamaño $(3, 2, 3)$ en los ejemplos."
+    "NumPy está preparado para trabajar con las operaciones ordinarias del álgebra lineal y de manera más extendida con álgebra tensorial directamente. Los siguientes ejemplos muestran como sumar tensores. Usaremos tensores de tamaño $(3, 2, 3)$ en los ejemplos."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -119,12 +135,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se asume que los tensores que se suman tienen exactamente la misma forma (shape). Puede haber tantos sumando como se quiera. La suma ocurre componente a componente, es decir se suman las componentes que están en la misma posición en cada uno de los tensores."
+    "Se asume que los tensores que se suman tienen exactamente la misma forma (shape). Puede haber tantos sumandos como se quiera. La suma ocurre componente a componente, es decir se suman las componentes que están en la misma posición en cada uno de los tensores."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -405,20 +421,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A= [[1 2 3]\n",
+      "A = [[1 2 3]\n",
       " [4 5 6]]\n",
       "A.shape = (2, 3)\n",
-      "B= [[ 10  20  30  40]\n",
+      "\n",
+      "B = [[ 10  20  30  40]\n",
       " [ 50  60  70  80]\n",
       " [ 90 100 110 120]]\n",
       "B.shape = (3, 4)\n",
+      "\n",
       "C= [[ 380  440  500  560]\n",
       " [ 830  980 1130 1280]]\n",
       "C.shape = (2, 4)\n",
@@ -471,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +583,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La imagen ilustra la operación tensorial mas usual en inteligencia artificial. El tensor de la izquierda (*azul*) tiene forma $(3,3,3)$. Puede imaginar que este tensor representa una imagen a color de tamaño $3\\times 3$. El tensor en el centro tiene forma $(3, 2)$ (*rosa*), el cual puede usted pensar como un filtro (más preciso sería decir un kernel) qu va a operar sobre cada una de las capas de color de la imagen. ¿Y cómo lo hace?\n",
+    "La imagen ilustra la operación tensorial más usual en inteligencia artificial. El tensor de la izquierda (*azul*) tiene forma $(3,3,3)$. Puede imaginar que este tensor representa una imagen a color de tamaño $3\\times 3$. El tensor en el centro tiene forma $(3, 2)$ (*rosa*), el cual puede usted pensar como un filtro (más preciso sería decir un kernel) qu va a operar sobre cada una de las capas de color de la imagen. ¿Y cómo lo hace?\n",
     "\n",
     "Pues sencillamente efectúa el producto de la matriz de cada color, es decir cada capa de la matriz *azul* con el filtro, es decir con la matriz *rosa*. \n",
     "\n",
@@ -577,14 +595,14 @@
     "  \n",
     "* La tercera capa de la matriz *azul* tiene forma $(3,3)$ se multiplica matricialmente con la matriz *rosa*, dando como resultado la matriz de la tercera capa del tensor destino (*verde), de forma $(3, 2)$.\n",
     "\n",
-    "Al final el tensor verde tiene forma $(3, 3, 2)$."
+    "Al final el tensor verde tiene forma $(3, 3, 2)$.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "De manera un poco mas general, vamos a suponer que cada elemento en los tensores de dimensión 3 se indexan mediante coordenadas (fila, columna, profundidad) y que los tensores de dimensión 2 se indexan como (fila, columna).\n",
+    "De manera un poco más general, vamos a suponer que cada elemento en los tensores de dimensión 3 se indexan mediante coordenadas (fila, columna, profundidad) y que los tensores de dimensión 2 se indexan como (fila, columna).\n",
     "\n",
     "La siguiente imagen ilustra la forma de un producto tensorial. \n",
     "\n",
@@ -635,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +825,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.13 ('work')",
    "language": "python",
    "name": "python3"
   },
@@ -821,9 +839,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.13"
   },
-  "toc-autonumbering": false
+  "toc-autonumbering": false,
+  "vscode": {
+   "interpreter": {
+    "hash": "3620b340ed2ed479d71e72c732c6d6a6eac39d8adbece51414abdea5ed84aec5"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
