--- a/Fundamentacion_Matematica/Cuadernos/t_0040_Tensores_Distribuciones_Probabilidad.ipynb
+++ b/Fundamentacion_Matematica/Cuadernos/t_0040_Tensores_Distribuciones_Probabilidad.ipynb
@@ -10,6 +10,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "222e89aa",
+   "metadata": {},
+   "source": [
+    "<figure>\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Archivos_Generales/Imagenes/Estampillas.jpg\" width=\"600\" height=\"400\" align=\"center\" /> \n",
+    "</center>   \n",
+    "</figure>\n",
+    "<center>\n",
+    "    \n",
+    "Fuente: [Pexels](https://www.pexels.com/es-es/foto/coleccion-de-sellos-248993/)   \n",
+    "</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "nominated-yield",
    "metadata": {},
    "source": [
@@ -108,7 +124,7 @@
     "</center>\n",
     "</figure>\n",
     "\n",
-    "[Fuente](https://medium.com/@zachary.bedell/support-vector-machines-explained-73f4ec363f13)"
+    "Fuente: [Support Vector Machines Explained](https://medium.com/@zachary.bedell/support-vector-machines-explained-73f4ec363f13)"
    ]
   },
   {
@@ -235,7 +251,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -249,7 +265,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+   }
   }
  },
  "nbformat": 4,
