--- a/Redes_Recurrentes/Cuadernos/rnr_GRU_Intro.ipynb
+++ b/Redes_Recurrentes/Cuadernos/rnr_GRU_Intro.ipynb
@@ -4,7 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style=\"color:#F72585\">Redes GRU (Gated Recurrent Unit)</span>"
+    "# <span style=\"color:#F72585\"><center>Redes GRU (Gated Recurrent Unit)</center></span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<figure>\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Recurrentes/Imagenes/Gru_Lines.png\" width=\"600\" height=\"400\" align=\"center\" /> \n",
+    "</center>   \n",
+    "</figure>\n",
+    "<center>\n",
+    "\n",
+    "Fuente: <a href=\"https://commons.wikimedia.org/wiki/File:Gru_Lines.png\">Gru.png: Roberto Muraderivative work: Hunnjazal</a>, <a href=\"https://creativecommons.org/licenses/by/3.0\">CC BY 3.0</a>, via Wikimedia Commons\n",
+    "\n",
+    "</center>\n",
+    "\n"
    ]
   },
   {
@@ -34,7 +51,7 @@
     "$$\n",
     "\n",
     "\n",
-    "Si $g$ es una función de activación  suave, como un sigmoide o una tangente hiperbólica, es común definir\n",
+    "Si $g$ es una función de activación suave, como un sigmoide o una tangente hiperbólica, es común definir\n",
     "\n",
     "$$\n",
     "h_t = g(Wh_{t-1} + Ux_t+ b)\n",
@@ -52,17 +69,17 @@
     "p (x_t | x_1,\\ldots, x_{t − 1}) = g (h_t)\n",
     "$$\n",
     "\n",
-    "El problema con este modelo, es que el cálculo del gradiente tiende a volverse cero o a explotar. \n",
+    "El problema con este modelo es que el cálculo del gradiente tiende a volverse cero o a explotar. \n",
     "\n",
-    "Dos líneas de trabajo impulsó esta situación. Por un lado se inició la búsqueda de nuevas técnicas para para el uso del gradiente en el proceso de optimización de  la función de costo y por el otro, el desarrollo de nuevos modelos de redes neuronales. \n",
+    "Dos líneas de trabajo impulsaron esta situación. Por un lado se inició la búsqueda de nuevas técnicas para para el uso del gradiente en el proceso de optimización de la función de costo y por el otro, el desarrollo de nuevos modelos de redes neuronales. \n",
     "\n",
     "\n",
     "La primera línea ha producido nuevas técnicas de optimización estocástica basados en el gradiente, que han sido usado exitosamente en redes generales. \n",
     "\n",
-    "La segunda línea llevó al desarrollo de las redes [LSTM](Intro_LSTM.ipynb), en las cuales la función de activación consiste en una transformación afinada seguida por una simple no linealidad de elementos mediante el uso de unidades de compuerta, [Hochreiter y Schmidhuber, 1997](https://www.bioinf.jku.at/publications/older/2604.pdf). \n",
+    "La segunda línea llevó al desarrollo de las redes {ref}`Intro_LSTM`, en las cuales la función de activación consiste en una transformación afinada seguida por una simple no linealidad de elementos mediante el uso de unidades de compuerta, [Hochreiter y Schmidhuber, 1997](https://www.bioinf.jku.at/publications/older/2604.pdf). \n",
     "\n",
     "\n",
-    "Más recientemente, otro tipo de unidad recurrente, a la que nos referimos como una unidad recurrente cerrada (GRU), fue propuesta por [Cho et al. 2014](https://arxiv.org/pdf/1409.1259.pdf). Puede consultar una comparación entre LSTM y GRU en [Junyoung Chung et al., 2014](https://arxiv.org/pdf/1412.3555v1.pdf). De estas unidades recurrentes se ha demostrado que funcionan bien en tareas que requieren captura de dependencias a largo plazo.  Esas tareas incluyen, pero no se limitan a reconocimiento de voz, música,..."
+    "Más recientemente, otro tipo de unidad recurrente, a la que nos referimos como una unidad recurrente cerrada (GRU), fue propuesta por [Cho et al. 2014](https://arxiv.org/pdf/1409.1259.pdf). Puede consultar una comparación entre LSTM y GRU en [Junyoung Chung et al., 2014](https://arxiv.org/pdf/1412.3555v1.pdf). De estas unidades recurrentes se ha demostrado que funcionan bien en tareas que requieren captura de dependencias a largo plazo.  Esas tareas incluyen, pero no se limitan a reconocimiento de voz, música,...\n"
    ]
   },
   {
@@ -93,7 +110,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Recurrentes/Imagenes/compuerta_GRU_after_false.jpg\" width=\"800\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Recurrentes/Imagenes/compuerta_GRU_after_false.jpg\" width=\"800\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -114,7 +131,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Recurrentes/Imagenes/compuerta_GRU_after_true.jpg\" width=\"800\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Recurrentes/Imagenes/compuerta_GRU_after_true.jpg\" width=\"800\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -161,10 +178,10 @@
     "en donde $W_z$ y $U_z$ son pesos asociados $x_t$ (la nueva entrada) y $h_{t-1}$, (la  información procedente de la unidad anterior).\n",
     "\n",
     "\n",
-    "La puerta de actualización ayuda al modelo a determinar qué cantidad de la información pasada (de los pasos de tiempo anteriores) debe transmitirse al futuro, combinandola  con la nueva información. \n",
+    "La puerta de actualización ayuda al modelo a determinar qué cantidad de la información pasada (de los pasos de tiempo anteriores) debe transmitirse al futuro, combinándola  con la nueva información. \n",
     "\n",
     "\n",
-    "Eso es realmente poderoso porque el modelo puede decidir copiar toda la información del pasado y eliminar el riesgo de desvanecer del gradiente."
+    "Eso es realmente poderoso porque el modelo puede decidir copiar toda la información del pasado y eliminar el riesgo de desvanecer del gradiente.\n"
    ]
   },
   {
@@ -244,7 +261,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Recurrentes/Imagenes/plano_gru.jpg\" width=\"800\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Recurrentes/Imagenes/plano_gru.jpg\" width=\"800\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -317,9 +334,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\anaconda3\\envs\\work\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.3\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -331,7 +356,7 @@
    "source": [
     "import tensorflow as tf\n",
     "inputs = tf.random.normal([32,10,8])\n",
-    "gru = tf.keras.layers.GRU(4) # gru es una capa de tamaño de salidad 4.\n",
+    "gru = tf.keras.layers.GRU(4) # gru es una capa de tamaño de salida 4.\n",
     "output = gru(inputs)\n",
     "print (output.shape)\n"
    ]
@@ -347,16 +372,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En algunos casos es necesario disponer del valor del estado oculto para cada valor en la secuenci de entrada. Esta secuencia tiene tamaño [batch_size, time_step, output_size]\n",
-    "En el sugiente ejemplo se tiene que\n",
+    "En algunos casos es necesario disponer del valor del estado oculto para cada valor en la secuencia de entrada. Esta secuencia tiene tamaño [batch_size, time_step, output_size]\n",
+    "En el siguiente ejemplo se tiene que\n",
     "\n",
-    "- `return_sequences` son todos lo estados del estado oculto\n",
-    "- `return_state` es el último valor del estado oculto"
+    "- `return_sequences` son todos los estados del estado oculto\n",
+    "- `return_state` es el último valor del estado oculto\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +451,7 @@
        "       [ True,  True,  True,  True]])>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1654,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1663,7 +1688,7 @@
        "3"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1674,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1708,7 @@
        "(8, 12)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1694,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1703,7 +1728,7 @@
        "(4, 12)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1714,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1723,7 +1748,7 @@
        "(2, 12)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1741,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1788,7 +1813,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.8 64-bit",
+   "display_name": "Python 3.9.13 ('work')",
    "language": "python",
    "name": "python3"
   },
@@ -1802,12 +1827,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.13"
   },
   "toc-autonumbering": false,
   "vscode": {
    "interpreter": {
-    "hash": "cf92aa13fedf815d5c8dd192b8d835913fde3e8bc926b2a0ad6cc74ef2ba3ca2"
+    "hash": "3620b340ed2ed479d71e72c732c6d6a6eac39d8adbece51414abdea5ed84aec5"
    }
   }
  },
