--- a/Fundamentacion_Matematica/Cuadernos/mod_Modelamiento.ipynb
+++ b/Fundamentacion_Matematica/Cuadernos/mod_Modelamiento.ipynb
@@ -31,7 +31,7 @@
     "id": "h68KR1LqB8Xw"
    },
    "source": [
-    "## <span style=\"color:#4361EE\">1. Modelos Mentales</span>"
+    "## <span style=\"color:#4361EE\">Modelos Mentales</span>"
    ]
   },
   {
@@ -75,7 +75,7 @@
     "</center>\n",
     "</figure>\n",
     "\n",
-    "Fuente: [Wikipedia](https://commons.wikimedia.org/wiki/File:Example_of_a_set.svg#/media/File:Example_of_a_set.svg)"
+    "Fuente: <a href=\"https://commons.wikimedia.org/wiki/File:Example_of_a_set.svg\">PolygonsSet.svg: kismalac / derivative work: Stephan Kulla (Stephan Kulla)</a>, CC0, via Wikimedia Commons"
    ]
   },
   {
@@ -91,7 +91,7 @@
     "\n",
     "El objetivo de la física sería usar estos modelos matemáticos ya desarrollados para poder predecir cosas útiles sobre el mundo real.\n",
     "\n",
-    "Por ejemplo, anteriormente, cuando ocurrían eclipses solares, lunares o pasaba algún cometa cerca de la tierra, muchas culturas lo consideraban como un **castigo de los dioses**, pues no tenían un entendimiento suficiente sobre lo que estaba ocurriendo; en otras palabras era un acontecimiento **sobrenatural**.\n",
+    "Por ejemplo, anteriormente, cuando ocurrían eclipses solares, lunares o pasaba algún cometa cerca de la tierra, muchas culturas lo consideraban como un **castigo de los dioses**, pues no tenían un entendimiento suficiente sobre lo que estaba ocurriendo; en otras palabras, era un acontecimiento **sobrenatural**.\n",
     "\n"
    ]
   },
@@ -102,7 +102,7 @@
     "id": "v2GqFHLvCEVK"
    },
    "source": [
-    "## <span style=\"color:#4361EE\">2. Modelos Determinísticos</span>"
+    "## <span style=\"color:#4361EE\">Modelos Determinísticos</span>"
    ]
   },
   {
@@ -135,7 +135,7 @@
     "</center>\n",
     "</figure>\n",
     "\n",
-    "Fuente: [Wikipedia](https://es.wikipedia.org/wiki/Galileo_Galilei#/media/Archivo:Justus_Sustermans_-_Portrait_of_Galileo_Galilei,_1636.jpg)"
+    "Fuente: <a href=\"https://commons.wikimedia.org/wiki/File:Justus_Sustermans_-_Portrait_of_Galileo_Galilei,_1636.jpg\">Justus Sustermans</a>, Public domain, via Wikimedia Commons"
    ]
   },
   {
@@ -225,8 +225,16 @@
     "Recordemos que $a=\\frac{dv}{dt}$. Entonces, integrando obtenemos:\n",
     "\n",
     "$$v(t)=-gt+C$$\n",
-    "\n",
-    "**Consejo para la vida:** La cosas siempre tienen una condición inicial. Por ejemplo,\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} Consejo para la vida\n",
+    ":class: tip\n",
+    "La cosas siempre tienen una condición inicial. Por ejemplo,\n",
     "\n",
     "$$v(0)=v_o$$\n",
     "\n",
@@ -236,7 +244,8 @@
     "\n",
     "Usando un proceso similar (**Tarea**), llegamos a que:\n",
     "\n",
-    "$$x(t) = x_o+v_o t -\\frac{1}{2}gt^2 $$"
+    "$$x(t) = x_o+v_o t -\\frac{1}{2}gt^2 $$\n",
+    "```"
    ]
   },
   {
@@ -340,7 +349,7 @@
    "source": [
     "Supongamos que en una empresa se fabrican 100 productos y trabajan 100 empleados diferentes. \n",
     "\n",
-    "Si pudieramos registrar cuantas horas se demora cada uno de los empleados en fabricar cada uno de los productos, fijando ciertas horas de trabajo laboral en un contrato, podríamos resumir la información en la siguiente tabla:"
+    "Si pudiéramos registrar cuantas horas se demora cada uno de los empleados en fabricar cada uno de los productos, fijando ciertas horas de trabajo laboral en un contrato, podríamos resumir la información en la siguiente tabla:\n"
    ]
   },
   {
@@ -349,8 +358,8 @@
    "source": [
     "<table width = \"250\">\n",
     "  <tr>\n",
-    "    <th>Emp\\Prod</th>\n",
-    "    <th>$x_1$</th>\n",
+    "    <th> Emp\\Prod </th>\n",
+    "    <th> $x_1$ </th>\n",
     "    <th>$x_2$</th>\n",
     "    <th>$\\dots$</th>\n",
     "    <th>$x_{100}$</th>\n",
@@ -471,7 +480,7 @@
     "</center>\n",
     "</figure>\n",
     "\n",
-    "Fuente: [Wikipedia](https://es.wikipedia.org/wiki/L%C3%A1mpara_de_plasma#/media/Archivo:Plasma-lamp_2.jpg)"
+    "Fuente: <a href=\"https://commons.wikimedia.org/wiki/File:Plasma-lamp_2.jpg\">I, Luc Viatour</a>, <a href=\"http://creativecommons.org/licenses/by-sa/3.0/\">CC BY-SA 3.0</a>, via Wikimedia Commons"
    ]
   },
   {
@@ -605,7 +614,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.9.8 64-bit",
+   "display_name": "Python 3.9.13 ('work')",
    "language": "python",
    "name": "python3"
   },
@@ -619,11 +628,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "cf92aa13fedf815d5c8dd192b8d835913fde3e8bc926b2a0ad6cc74ef2ba3ca2"
+    "hash": "3620b340ed2ed479d71e72c732c6d6a6eac39d8adbece51414abdea5ed84aec5"
    }
   }
  },
