--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Introduccion.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Introduccion.ipynb
@@ -92,7 +92,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Diplomado-Avanzado/main/Tratamiento%20de%20Lenguaje%20Natural%20(PLN)/Imagenes/cluster_kmeans_10.png\" width=\"600\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/cluster_kmeans_10.png\" width=\"600\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Áreas del conocimiento en Astrofísica, a partir de artículos científicos.</p>\n",
@@ -980,7 +980,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Diplomado-Avanzado/main/Tratamiento%20de%20Lenguaje%20Natural%20(PLN)/Imagenes/pca.png\" width=\"500\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/pca.png\" width=\"500\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Arquitectura del modelo Semática Latente</p>\n",
@@ -1051,7 +1051,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Diplomado-Avanzado/main/Tratamiento%20de%20Lenguaje%20Natural%20(PLN)/Imagenes/Diagram_Blei.png\" width=\"600\" height=\"500\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/Diagram_Blei.png\" width=\"600\" height=\"500\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Intuición detrás de LDA</p>\n",
