--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Introduccion.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Introduccion.ipynb
@@ -20,6 +20,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<figure>\n",
+    "<center>\n",
+    "<img src=\"../Imagenes/library.jpg\" width=\"600\" height=\"600\" align=\"center\"/>\n",
+    "</center>\n",
+    "</figure>\n",
+    "\n",
+    "Fuente: [Pixabay](https://pixabay.com/es/photos/biblioteca-libros-educación-869061/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## <span style=\"color:#4361EE\">Introducción</span> "
    ]
   },
