--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Introduccion.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Introduccion.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/library.jpg\" width=\"600\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/library.jpg\" width=\"600\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
