--- a/Aprendizaje_Reforzado/Cuadernos/ar_Aprendizaje_Reforzado_Intro.ipynb
+++ b/Aprendizaje_Reforzado/Cuadernos/ar_Aprendizaje_Reforzado_Intro.ipynb
@@ -239,7 +239,7 @@
    "source": [
     "En este caso el agente es el oficinista y el ambiente está constituido por la oficina en donde trabaja y su casa. El oficinista puede estar en uno de cuatro estados: *café*, *computador*. *charla* y *casa*. \n",
     "\n",
-    "La imagen ilustra una forma clásica de mostrar un proceso de Markov. Los círculos muestran los estados posibles del agente y las flechas en el grafo están etiquetadas las probabilidades de pasar de un estado a otro. Por ejemplo, la probabilidad de pasar de *café* a *charla* es 0.7. Puede imaginar que si el oficinista va por un café, lo más probable es que termine entablando una conversación con algún compañero. Por fuerza de la costumbre llamaremos a nuestro oficinista *Dilbert*. El nombre proviene del personaje principal de la serie televisa *Scott Adams*.\n"
+    "La imagen ilustra una forma clásica de mostrar un proceso de Markov. Los círculos muestran los estados posibles del agente y las flechas en el grafo están etiquetadas las probabilidades de pasar de un estado a otro. Por ejemplo, la probabilidad de pasar de *café* a *charla* es 0.7. Puede imaginar que, si el oficinista va por un café, lo más probable es que termine entablando una conversación con algún compañero. Por fuerza de la costumbre llamaremos a nuestro oficinista *Dilbert*. El nombre proviene del personaje principal de la serie televisa *Scott Adams*.\n"
    ]
   },
   {
@@ -475,9 +475,9 @@
    "metadata": {},
    "source": [
     "1. En *juegos*: +1 cada vez que se incrementa el puntaje (score) y -1 cada vez que decrece el puntaje (o se pierde una vida).\n",
-    "1. En el *mercado de acciones*: +1 por cada dólar  ganado y -1 por cada dólar perdido.\n",
+    "1. En el *mercado de acciones*: +1 por cada dólar ganado y -1 por cada dólar perdido.\n",
     "1. En *manejo autónomo de un vehículo*: +1 por cada kilómetro conducido, -100 por cada colisión.\n",
-    "1. *Recompensa dispersa* o *diferida*. Cuando al recompensa se entrega solamente al final de un proceso completo. Por ejemplo en el aprendizaje de juegos como ajedrez o Go, la recompensa puede ser +1, si el agente gana el juego y -1 si lo pierde."
+    "1. *Recompensa dispersa* o *diferida*. Cuando la recompensa se entrega solamente al final de un proceso completo. Por ejemplo, en el aprendizaje de juegos como ajedrez o Go, la recompensa puede ser +1, si el agente gana el juego y -1 si lo pierde.\n"
    ]
   },
   {
