--- a/Aprendizaje_Reforzado/Cuadernos/ar_Actor_Critico.ipynb
+++ b/Aprendizaje_Reforzado/Cuadernos/ar_Actor_Critico.ipynb
@@ -252,18 +252,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'common' from 'lib' (unknown location)",
+     "ename": "",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32md:\\Diplomado-Avanzado\\Aprendizaje Reforzado\\Cuadernos\\ar_Actor_Critico.ipynb Celda 23\u001b[0m in \u001b[0;36m<cell line: 13>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Diplomado-Avanzado/Aprendizaje%20Reforzado/Cuadernos/ar_Actor_Critico.ipynb#X30sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnn_utils\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Diplomado-Avanzado/Aprendizaje%20Reforzado/Cuadernos/ar_Actor_Critico.ipynb#X30sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39moptim\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39moptim\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Diplomado-Avanzado/Aprendizaje%20Reforzado/Cuadernos/ar_Actor_Critico.ipynb#X30sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlib\u001b[39;00m \u001b[39mimport\u001b[39;00m common\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'common' from 'lib' (unknown location)"
+      "\u001b[1;31mLa ejecución de celdas con 'Python 3.11.0 ('work')' requieren el paquete ipykernel.\n",
+      "\u001b[1;31mEjecute el siguiente comando para instalar 'ipykernel' en el entorno de Python. comando \n",
+      "\u001b[1;31m: 'conda install -n work ipykernel --update-deps --force-reinstall'"
      ]
     }
    ],
@@ -294,7 +293,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mLa ejecución de celdas con 'Python 3.11.0 ('work')' requieren el paquete ipykernel.\n",
+      "\u001b[1;31mEjecute el siguiente comando para instalar 'ipykernel' en el entorno de Python. comando \n",
+      "\u001b[1;31m: 'conda install -n work ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "GAMMA = 0.99\n",
     "LEARNING_RATE = 0.0001\n",
@@ -335,7 +345,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mLa ejecución de celdas con 'Python 3.11.0 ('work')' requieren el paquete ipykernel.\n",
+      "\u001b[1;31mEjecute el siguiente comando para instalar 'ipykernel' en el entorno de Python. comando \n",
+      "\u001b[1;31m: 'conda install -n work ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "class AtariA2C(nn.Module):\n",
     "    def __init__(self, input_shape, n_actions):\n",
@@ -402,7 +423,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mLa ejecución de celdas con 'Python 3.11.0 ('work')' requieren el paquete ipykernel.\n",
+      "\u001b[1;31mEjecute el siguiente comando para instalar 'ipykernel' en el entorno de Python. comando \n",
+      "\u001b[1;31m: 'conda install -n work ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "def unpack_batch(batch, net, device='cpu'):\n",
     "    states = []\n",
@@ -458,7 +490,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mLa ejecución de celdas con 'Python 3.11.0 ('work')' requieren el paquete ipykernel.\n",
+      "\u001b[1;31mEjecute el siguiente comando para instalar 'ipykernel' en el entorno de Python. comando \n",
+      "\u001b[1;31m: 'conda install -n work ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    # preparativos\n",
@@ -620,7 +663,7 @@
    ]
   },
   "kernelspec": {
-   "display_name": "Python 3.9.8 64-bit",
+   "display_name": "Python 3.11.0 ('work')",
    "language": "python",
    "name": "python3"
   },
@@ -634,11 +677,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.11.0"
   },
   "vscode": {
    "interpreter": {
-    "hash": "cf92aa13fedf815d5c8dd192b8d835913fde3e8bc926b2a0ad6cc74ef2ba3ca2"
+    "hash": "3620b340ed2ed479d71e72c732c6d6a6eac39d8adbece51414abdea5ed84aec5"
    }
   }
  },
