--- a/Redes_Recurrentes/Cuadernos/Temporal_Fusion_Transformer.ipynb
+++ b/Redes_Recurrentes/Cuadernos/Temporal_Fusion_Transformer.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "116e67da-ad3d-4268-b485-65ef7172f1da",
-   "metadata": {},
-   "source": [
-    "<figure>\n",
-    "<img src=\"../Imagenes/logo-final-ap.png\"  width=\"80\" height=\"80\" align=\"left\"/> \n",
-    "</figure>\n",
-    "\n",
-    "# <span style=\"color:blue\"><left>Aprendizaje Profundo</left></span>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "2f36a866-5fee-4fc7-bce7-85c19e06d35a",
    "metadata": {},
    "source": [
-    "# <span style=\"color:red\"><center>Temporal Fusion Transformer</center></span>"
+    "# <span style=\"color:#F72585\"><center>Temporal Fusion Transformer</center></span>"
    ]
   },
   {
@@ -35,7 +23,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/Multihorizon_Forecasting.png\" width=\"600\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Recurrentes/Imagenes/Multihorizon_Forecasting.png\" width=\"600\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -45,156 +33,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f99e3c90-dbc9-45fe-8201-8ddfae6f5395",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "##   <span style=\"color:blue\">Profesores</span>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e9a4a353-7bea-4b7f-8713-69146e84066e",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "### Coordinador"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a9080bdf-eee3-41b7-bcc3-4763ab317d4d",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "- Campo Elías Pardo, PhD, cepardot@unal.edu.co"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7731b9d7-3800-4c8b-a8e7-3968c1b31e67",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "### Conferencistas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4f17c879-dc56-4314-8f0b-f282072b74e8",
-   "metadata": {},
-   "source": [
-    "- Alvaro  Montenegro, PhD, ammontenegrod@unal.edu.co\n",
-    "- Daniel  Montenegro, Msc, dextronomo@gmail.com \n",
-    "- Oleg Jarma, Estadístico, ojarmam@unal.edu.co "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a89ba8a2-e5d0-4e5e-88a6-26c135cf25e1",
-   "metadata": {},
-   "source": [
-    "##   <span style=\"color:blue\">Asesora Medios y Marketing digital</span>\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e6f602a4-92bc-4e49-989b-fe1114780c01",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "- Maria del Pilar Montenegro, pmontenegro88@gmail.com "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7095bc4c-ef8f-470e-b41f-f898494d0420",
-   "metadata": {},
-   "source": [
-    "## <span style=\"color:blue\">Asistentes</span>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8ae30b59-4139-4270-a2bd-b6c58482ed2d",
-   "metadata": {},
-   "source": [
-    "- Nayibe Yesenia Arias, naariasc@unal.edu.co\n",
-    "- Venus Celeste Puertas, vpuertasg@unal.edu.co "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7ff62e42-72b6-408f-950f-f9e0d39ff401",
-   "metadata": {},
-   "source": [
-    "## <span style=\"color:blue\">Referencias</span>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7c546c17-3fbe-4bd1-826e-0bcde6fe639f",
-   "metadata": {},
-   "source": [
-    "1. [Alvaro Montenegro y Daniel Montenegro, Inteligencia Artificial y Aprendizaje Profundo, 2021](https://github.com/AprendizajeProfundo/Diplomado)\n",
-    "1. [Alvaro Montenegro, Daniel Montenegro y Oleg Jarma, Inteligencia Artificial y Aprendizaje Profundo Avanzado, 2022](https://github.com/AprendizajeProfundo/Diplomado-Avanzado)\n",
-    "1. [Tutoriales de Pytorch](https://pytorch.org/tutorials/)\n",
-    "1. [Pytorchlightning.ai](https://www.pytorchlightning.ai/)\n",
-    "1. [Tutorial de Pytorch-Forecasting (Temporal Fusion Transformer)](https://pytorch-forecasting.readthedocs.io/en/latest/tutorials/stallion.html)\n",
-    "1. [Lim et. al., Temporal Fusion Transformer](https://arxiv.org/pdf/1912.09363.pdf)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "59cded78-ef97-4957-9821-71f18d27073d",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "## <span style=\"color:blue\">Contenido</span>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0e473b6b-e560-42ed-b90e-deb76d9ee9bd",
-   "metadata": {},
-   "source": [
-    "* [Introducción](#Introducción)\n",
-    "* [Temporal Fusion Transformer](#Temporal-Fusion-Transformer)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "ab698e08-33bf-45c2-8b16-306084b6bf78",
    "metadata": {
     "tags": []
    },
    "source": [
-    "## <span style=\"color:blue\">Introducción</span> "
+    "## <span style=\"color:#4361EE\">Introducción</span> "
    ]
   },
   {
@@ -220,7 +64,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/Multihorizon_Forecasting.png\" width=\"600\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Recurrentes/Imagenes/Multihorizon_Forecasting.png\" width=\"600\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -233,7 +77,7 @@
    "id": "15e123bb-41ee-4527-a013-75054a458530",
    "metadata": {},
    "source": [
-    "## <span style=\"color:blue\">Temporal Fusion Transformer</span> "
+    "## <span style=\"color:#4361EE\">Temporal Fusion Transformer</span> "
    ]
   },
   {
@@ -243,7 +87,7 @@
     "tags": []
    },
    "source": [
-    "### Hipótesis asumidas"
+    "### <span style=\"color:#4CC9F0\">Hipótesis asumidas</span>"
    ]
   },
   {
@@ -266,7 +110,7 @@
     "tags": []
    },
    "source": [
-    "### Intervalos de predicción"
+    "### <span style=\"color:#4CC9F0\">Intervalos de predicción</span>"
    ]
   },
   {
@@ -280,8 +124,8 @@
     "optimizar las decisiones y la gestión de riesgos al proporcionar una indicación de los posibles\n",
     "mejores y peores valores que puede tomar el objetivo. \n",
     "\n",
-    "Como tal, en TFT adoptan la regresión  cuantil en la configuración de pronóstico de múltiples horizontes (por ejemplo, generar los percentiles 10,\n",
-    "50 y 90 en cada paso de tiempo). Cada pronóstico por cuantiles tomala forma\n",
+    "Como tal, en TFT adoptan la regresión cuantil en la configuración de pronóstico de múltiples horizontes (por ejemplo, generar los percentiles 10,\n",
+    "50 y 90 en cada paso de tiempo). Cada pronóstico por cuantiles toma la forma\n",
     "\n",
     "$$\n",
     "\\hat{y}_ i (q, t, \\tau ) = f_q (\\tau, y_{ i,t−k:t} , z_{i,t−k:t , x i,t−k:t+\\tau} , s_i ) ,\n",
@@ -297,7 +141,7 @@
     "\n",
     "+ entradas objetivo (target) y entradas (inputs) conocidos solo hasta el momento del pronóstico, es decir, \n",
     "$y_{ i,t−k:t} = \\{y_{i,t−k} , \\cdots, y_{ i,t} \\}$ \n",
-    "+ entradas conocidas en todo el rango,  es decir,   $x_{i,t-k:t+\\tau} = x_{i,t-k} , \\cdots, x_{i,t} , \\cdots, x_{i,t+\\tau}$"
+    "+ entradas conocidas en todo el rango,  es decir,   $x_{i,t-k:t+\\tau} = x_{i,t-k} , \\cdots, x_{i,t} , \\cdots, x_{i,t+\\tau}$\n"
    ]
   },
   {
@@ -305,7 +149,7 @@
    "id": "2ca3b9ad-e253-4a2f-97bf-c91b15a230fa",
    "metadata": {},
    "source": [
-    "### Arquitectura del modelo Temporal Fusion Transformer"
+    "### <span style=\"color:#4CC9F0\">Arquitectura del modelo Temporal Fusion Transformer</span>"
    ]
   },
   {
@@ -324,7 +168,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/Temporal_Fusion_Transformer.png\" width=\"1000\" height=\"1000\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Recurrentes/Imagenes/Temporal_Fusion_Transformer.png\" width=\"1000\" height=\"1000\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -346,6 +190,27 @@
     "3. ***Codificadores de covariables estáticas** para integrar características estáticas en la red, a través de la codificación de vectores de contexto para condicionar la dinámica temporal.\n",
     "4. **Procesamiento temporal** para aprender relaciones temporales tanto a corto como a largo plazo*. relaciones de entradas variables en el tiempo tanto observadas como conocidas. Una capa *seq2seq* se emplea para el procesamiento local, mientras que la dependencia a largo plazo se capturan utilizando un  bloque de atención de múltiples cabezas interpretable.\n",
     "5. **Intervalos de predicción** a través de pronósticos por cuantiles para determinar el rango de probabilidad valores objetivo en cada horizonte de predicción."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ff62e42-72b6-408f-950f-f9e0d39ff401",
+   "metadata": {},
+   "source": [
+    "## <span style=\"color:#4361EE\">Referencias</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c546c17-3fbe-4bd1-826e-0bcde6fe639f",
+   "metadata": {},
+   "source": [
+    "1. [Alvaro Montenegro y Daniel Montenegro, Inteligencia Artificial y Aprendizaje Profundo, 2021](https://github.com/AprendizajeProfundo/Diplomado)\n",
+    "1. [Alvaro Montenegro, Daniel Montenegro y Oleg Jarma, Inteligencia Artificial y Aprendizaje Profundo Avanzado, 2022](https://github.com/AprendizajeProfundo/Diplomado-Avanzado)\n",
+    "1. [Tutoriales de Pytorch](https://pytorch.org/tutorials/)\n",
+    "1. [Pytorchlightning.ai](https://www.pytorchlightning.ai/)\n",
+    "1. [Tutorial de Pytorch-Forecasting (Temporal Fusion Transformer)](https://pytorch-forecasting.readthedocs.io/en/latest/tutorials/stallion.html)\n",
+    "1. [Lim et. al., Temporal Fusion Transformer](https://arxiv.org/pdf/1912.09363.pdf)"
    ]
   }
  ],
