--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Char_generator_RNN.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Char_generator_RNN.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/text_generation_sampling.png\" width=\"600\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/text_generation_sampling.png\" width=\"600\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Muestreo  de palabras</p>\n",
@@ -1191,7 +1191,7 @@
     "\n",
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/text_generation_training.png\" width=\"500\" height=\"500\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/text_generation_training.png\" width=\"500\" height=\"500\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Modelo de generación de texto</p>\n",
@@ -1867,7 +1867,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/text_generation_sampling.png\" width=\"500\" height=\"500\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/text_generation_sampling.png\" width=\"500\" height=\"500\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Muestreo  de palabras</p>\n",
