--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Shakespeare-Original.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_Shakespeare-Original.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/Shakespeare.jpg\" width=\"600\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/Shakespeare.jpg\" width=\"600\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -971,7 +971,7 @@
     "for _ in range(next_words):\n",
     "    token_list = tokenizer.texts_to_sequences([seed_text])[0]\n",
     "    token_list = pad_sequences([token_list], maxlen=max_sequence_len-1, padding='pre')\n",
-    "    #predicted = model.predict(token_list, verbose=0)\n",
+    "    #predicted = model.predict_class(token_list, verbose=0)\n",
     "    predicted = np.argmax(model.predict(token_list),axis=1)\n",
     "    output_word = \"\"\n",
     "    \n",
